--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    kapt "com.android.databinding:compiler:$android_plugin_version"
 
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -40,6 +41,8 @@ dependencies {
     compile 'com.github.kobakei:MaterialFabSpeedDial:1.1.5'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'kotlin-kapt'
 
 repositories {
     mavenCentral()
