--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'co.metalab.asyncawait:asyncawait:1.0.0'
     compile 'com.github.kobakei:MaterialFabSpeedDial:1.1.5'
     compile 'com.xw.repo:bubbleseekbar:3.4-lite'
+    compile 'au.com.dardle:badgelayout:0.1.0'
     testCompile 'junit:junit:4.12'
 }
 
