--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+
     }
     buildTypes {
         release {
@@ -21,6 +22,9 @@ android {
     }
     dataBinding {
         enabled = true
+    }
+    applicationVariants.all { variant ->
+        variant.resValue "string", "app_version_name", variant.versionName
     }
 }
 
@@ -41,6 +45,7 @@ dependencies {
     compile 'com.github.kobakei:MaterialFabSpeedDial:1.1.5'
     compile 'com.xw.repo:bubbleseekbar:3.4-lite'
     compile 'au.com.dardle:badgelayout:0.1.0'
+    compile 'com.pavelsikun:material-seekbar-preference:2.3.0+'
     testCompile 'junit:junit:4.12'
 }
 
