Implemented all the basic logic necessary to enter a bill manually

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".view.activity.AssignationActivity"
             android:label="@string/title_activity_assignation"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".view.activity.BillPersonTraceActivity" />
-        <activity android:name=".view.activity.BillSummaryActivity" />
-        <activity android:name=".view.activity.FinalResultActivity" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
+
+        <activity android:name=".view.activity.BillPersonTraceActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
+
+        <activity android:name=".view.activity.BillSummaryActivity"/>
+
+        <activity android:name=".view.activity.FinalResultActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
+
         <activity
             android:name=".view.activity.MainActivity"
             android:label="@string/title_activity_main"
@@ -27,7 +35,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.ManualTranscriptionActivity"></activity>
+
+        <activity android:name=".view.activity.ManualTranscriptionActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
     </application>
 
 </manifest>
