--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,45 +2,49 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="es.soutullo.blitter">
 
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.gms.vision.DEPENDENCIES"
+            android:value="ocr" />
 
         <activity
             android:name=".view.activity.AssignationActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:configChanges="keyboardHidden|orientation|screenSize"/>
-
-        <activity android:name=".view.activity.BillPersonTraceActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"/>
-
-        <activity android:name=".view.activity.BillSummaryActivity"/>
-
-        <activity android:name=".view.activity.FinalResultActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"/>
-
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".view.activity.BillPersonTraceActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity android:name=".view.activity.BillSummaryActivity" />
+        <activity
+            android:name=".view.activity.FinalResultActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
             android:name=".view.activity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:windowSoftInputMode="adjustPan" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".view.activity.ManualTranscriptionActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"/>
-
-        <activity android:name=".view.activity.AssignationIntroActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity android:name=".view.activity.SettingsActivity"/>
+        <activity
+            android:name=".view.activity.ManualTranscriptionActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name=".view.activity.AssignationIntroActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".view.activity.SettingsActivity" />
+        <activity android:name=".view.activity.OcrCaptureActivity"></activity>
     </application>
 
 </manifest>
