--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
             android:name=".view.activity.AssignationIntroActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".view.activity.SettingsActivity" />
-        <activity android:name=".view.activity.OcrCaptureActivity"></activity>
+        <activity android:name=".view.activity.OcrCaptureActivity"
+            android:theme="@style/AppTheme.Fullscreen"/>
     </application>
 
 </manifest>
